<resources>
    <string name="app_name">TicketToRide</string>
    <string name="login_title">Ticket to Ride</string>
    <string name="username_hint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="create_game">Create Game</string>
    <string name="join_game">Join Game</string>
    <string name="joinGameTitle">Join a Game</string>
    <string name="game_name">Game Name</string>
    <string name="game_pending">Game Pending</string>
    <string name="available_games">Available Games</string>
    <string name="players_number">Number of Players</string>
    <string name="error_message_placeholder">Error message</string>
    <string name="list_of_players">Loading...</string>
    <string name="start_message">The game will start once
        all players have joined</string>
    <string name="no_games">No games have been created yet...\n Please create a game.</string>
    <string name="lobby">Game Lobby</string>
    <string-array name="players">
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>
    </string-array>
    <string name="title_activity_map">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="test">Test</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bank_title">Bank</string>
    <string name="train_card_description">Train Card</string>
    <string name="draw_cards">Draw Cards</string>
    <string name="place_trains">Place Trains</string>
    <string name="draw_routes">Draw Routes</string>
    <string name="draw_pile">Draw\na\nCard</string>
    <string name="test_chat_message">This is a very long message that I will use to test to see if the layout will work properly for what I am trying to do.</string>
    <string name="test_chat_name">Player Name:</string>
    <string name="send">Send</string>
    <string name="chat_placeholder">Chat...</string>
    <string name="white">White</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="orange">Orange</string>
    <string name="green">Green</string>
    <string name="purple">Purple</string>
    <string name="black">Black</string>
    <string name="red">Red</string>
    <string name="locomotive">Locomotive</string>
    <string name="destination_pile">Destination Cards</string>
    <string name="number_placeholder">42</string>
    <string name="train_cards_remaining">Train Cards\nRemaining</string>
    <string name="destination_cards_remaining">Destination\nCards Remaining</string>
    <string name="username">username</string>
    <string name="player_info_player_heading">Player</string>
    <string name="player_info_points_heading">Points</string>
    <string name="player_info_trains_heading">Trains</string>
    <string name="player_info_cards_heading">Cards</string>
    <string name="player_info_routes_heading">Routes</string>
    <string name="game_history_sample">Player A did action B</string>
    <string name="view_bank">View Bank</string>
    <string name="view_summary">View Summary</string>
    <string name="your_turn">Your Turn</string>
    <string name="results_title">Game Results</string>
    <string name="player_rank">Rank</string>
    <string name="return_button">Return to Lobby</string>
    <string name="rank">Rank</string>
    <string name="destination_complete_points">Complete</string>
    <string name="destination_incomplete_points">Incomplete</string>
    <string name="destination_count_points">Max Reached</string>
    <string name="route_points">Routes</string>
    <string name="train_points">Train</string>
    <string name="total_points">Total</string>
    <string name="award">Award?</string>
</resources>
