<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.right.HandFragment">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="6"
        android:verticalSpacing="50dp"
        android:horizontalSpacing="50dp"
        android:useDefaultMargins="false"
        android:layout_gravity="center"
        android:textAlignment="gravity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:text="@string/white"
            android:textColor="@color/PureWhite"
            style="@style/PlayerHandColor"/>
        <TextView
            android:text="@string/blue"
            android:fontFamily="@font/shangiri"
            android:textColor="@color/Blue"
            style="@style/PlayerHandColor"/>
        <TextView
            android:text="@string/yellow"
            android:fontFamily="@font/shangiri"
            android:textColor="@color/Yellow"
            style="@style/PlayerHandColor"/>
        <TextView
            android:id="@+id/num_white"
            android:text="0"
            style="@style/PlayerHandNumber"/>
        <TextView
            android:id="@+id/num_blue"
            android:text="0"
            style="@style/PlayerHandNumber"/>
        <TextView
            android:id="@+id/num_yellow"
            android:text="0"
            style="@style/PlayerHandNumber"/>
        <TextView
            android:text="@string/orange"
            android:fontFamily="@font/shangiri"
            android:textColor="@color/Orange"
            style="@style/PlayerHandColor"/>
        <TextView
            android:text="@string/green"
            android:fontFamily="@font/shangiri"
            android:textColor="@color/Green"
            style="@style/PlayerHandColor"/>
        <TextView
            android:text="@string/purple"
            android:fontFamily="@font/shangiri"
            android:textColor="@color/Purple"
            style="@style/PlayerHandColor"/>
        <TextView
            android:id="@+id/num_orange"
            android:text="0"
            style="@style/PlayerHandNumber"/>
        <TextView
            android:id="@+id/num_green"
            android:text="0"
            style="@style/PlayerHandNumber"/>
        <TextView
            android:id="@+id/num_purple"
            android:text="0"
            style="@style/PlayerHandNumber"/>
        <TextView
            android:text="@string/black"
            android:fontFamily="@font/shangiri"
            android:textColor="@color/Black"
            style="@style/PlayerHandColor"/>
        <TextView
            android:text="@string/red"
            android:fontFamily="@font/shangiri"
            android:textColor="@color/Red"
            style="@style/PlayerHandColor"/>
        <TextView
            android:text="@string/locomotive"
            android:fontFamily="@font/shangiri"
            android:textColor="@color/Gray"
            style="@style/PlayerHandColor"/>
        <TextView
            android:id="@+id/num_black"
            android:text="0"
            style="@style/PlayerHandNumber"/>
        <TextView
            android:id="@+id/num_red"
            android:text="0"
            style="@style/PlayerHandNumber"/>
        <TextView
            android:id="@+id/num_locomotive"
            android:text="0"
            style="@style/PlayerHandNumber"/>

    </GridLayout>

</android.support.constraint.ConstraintLayout>