<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragment.right.PlayerInfoFragment">

    <TextView
        android:id="@+id/player_info_player_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/vacer"
        android:textColor="@color/Black"
        android:ems="10"
        android:text="@string/player_info_player_heading"
        app:layout_constraintEnd_toStartOf="@+id/player_info_player_points"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player_info_player_points"
        android:layout_width="@dimen/all_player_column_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/vacer"
        android:textColor="@color/Black"
        android:ems="10"
        android:text="@string/player_info_points_heading"
        app:layout_constraintEnd_toStartOf="@+id/player_info_player_num_trains"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player_info_player_num_trains"
        android:layout_width="@dimen/all_player_column_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/vacer"
        android:textColor="@color/Black"
        android:ems="10"
        android:text="@string/player_info_trains_heading"
        app:layout_constraintEnd_toStartOf="@+id/player_info_player_num_cards"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player_info_player_num_cards"
        android:layout_width="@dimen/all_player_column_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/vacer"
        android:textColor="@color/Black"
        android:ems="10"
        android:text="@string/player_info_cards_heading"
        app:layout_constraintEnd_toStartOf="@+id/player_info_player_num_routes"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player_info_player_num_routes"
        android:layout_width="@dimen/all_player_column_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/vacer"
        android:textColor="@color/Black"
        android:ems="10"
        android:text="@string/player_info_routes_heading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>