<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:backgroundTintMode="src_over"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/loginText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/chipfn"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/Red"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/login_title" />

    <Button
        android:id="@+id/createGame"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/Red"
        android:fontFamily="@font/shangiri"
        android:text="@string/login_button"
        android:textColor="@color/Gold"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/joinGame"
        app:layout_constraintStart_toStartOf="@+id/passwordImage"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/joinGame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/Red"
        android:fontFamily="@font/shangiri"
        android:text="@string/register_button"
        android:textColor="@color/Gold"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintBaseline_toBaselineOf="@+id/createGame"
        app:layout_constraintEnd_toEndOf="@+id/password" />

    <EditText
        android:id="@+id/username"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rectangle"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textColor="@color/DarkBrown"
        android:textColorHint="@color/DarkBrown"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/usernameImage"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rectangle"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="@color/DarkBrown"
        android:textColorHint="@color/DarkBrown"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/username"
        app:layout_constraintStart_toEndOf="@+id/usernameImage"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <ImageView
        android:id="@+id/usernameImage"
        android:layout_width="46dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/username"
        app:layout_constraintEnd_toStartOf="@+id/username"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/username"
        app:srcCompat="@drawable/ic_baseline_perm_identity_24px" />

    <ImageView
        android:id="@+id/passwordImage"
        android:layout_width="44dp"
        android:layout_height="42dp"
        app:layout_constraintBottom_toBottomOf="@+id/password"
        app:layout_constraintEnd_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="@+id/password"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_https_24px" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>