<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:background="@drawable/radial_gradient"
    android:padding="5dp">

    <TextView
        android:id="@+id/rank"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/vacer"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/playerUsername"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1" />

    <TextView
        android:id="@+id/playerUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autoText="true"
        android:fontFamily="@font/vacer"
        android:textAlignment="center"
        android:textSize="30sp"
        app:autoSizeMaxTextSize="18sp"
        app:autoSizeMinTextSize="8sp"
        app:autoSizeStepGranularity="2sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/rank"
        app:layout_constraintEnd_toStartOf="@+id/totalPoints"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/rank"
        tools:text="gilbert" />

    <TextView
        android:id="@+id/totalPoints"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/vacer"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/playerUsername"
        app:layout_constraintEnd_toStartOf="@+id/routePoints"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/playerUsername"
        tools:text="200" />

    <TextView
        android:id="@+id/routePoints"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/vacer"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/totalPoints"
        app:layout_constraintEnd_toStartOf="@+id/trainPoints"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/totalPoints"
        tools:text="45" />

    <TextView
        android:id="@+id/trainPoints"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/vacer"
        android:text="TextView"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/routePoints"
        app:layout_constraintEnd_toStartOf="@+id/awardPoints"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/routePoints"
        tools:text="45"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/awardPoints"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/vacer"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/trainPoints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/trainPoints"
        tools:text="10" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/shangiri"
        android:text="@string/rank"
        android:textColor="@color/Gold"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rank"
        app:layout_constraintStart_toStartOf="@+id/rank"
        app:layout_constraintTop_toBottomOf="@+id/rank" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/shangiri"
        android:text="@string/award"
        android:textColor="@color/Gold"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/awardPoints"
        app:layout_constraintStart_toStartOf="@+id/awardPoints"
        app:layout_constraintTop_toBottomOf="@+id/awardPoints" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/shangiri"
        android:text="@string/train_points"
        android:textColor="@color/Gold"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="@+id/trainPoints"
        app:layout_constraintStart_toStartOf="@+id/trainPoints" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/shangiri"
        android:text="@string/player_info_player_heading"
        android:textColor="@color/Gold"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="@+id/playerUsername"
        app:layout_constraintStart_toStartOf="@+id/playerUsername" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/shangiri"
        android:text="@string/total_points"
        android:textColor="@color/Gold"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="@+id/totalPoints"
        app:layout_constraintStart_toStartOf="@+id/totalPoints" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/shangiri"
        android:text="@string/destination_points"
        android:textColor="@color/Gold"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="@+id/routePoints"
        app:layout_constraintStart_toStartOf="@+id/routePoints" />

</android.support.constraint.ConstraintLayout>